   > Gilded Pickaxe
   > Magical Ocarina
   > Battle Cry
   > Ethereal Flute
   > Newbie Membership
   > Journeyman Membership
   > Globetrotter Membership
   > Fido's Collar
   > Reggie's Bananas
   > Salt Rock
   > Dry Ice Cube
   > Fish-Flavored Fish
   > Old Key
   > Andrew's Ancient Crystal of The Trail's Amazing History
   > [REDACTED TEAR]
   > [REDACTED WING]
   > [REDACTED CHIP]
 - 116 pieces of equipment:
  ~ 20 weapons:
   > Steel Hammer
   > Steel Knuckles
   > Shadowspec Sword
   > Shadowspec Warhammer
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Life Crystal Staff
   > Mana Crystal Staff
   > Grass Knuckles
   > Frost Edge
   > Infernal Sword
   > Infernal Wand
   > Hero Sword Replica
   > Tellurium Wand
   > Tellurium Spellbook
   > Harmony
   > Bloodlust ★★
  ~ 9 body armor:
   > Silver Chainmail
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Phantasmal Vestments
   > True Shadowspec Leathers
   > Tellurium Heavy Armor
   > Tellurium Robes
   > Tellurium Vestments
   > Tellurium Leathers
  ~ 10 head armor:
   > Red Headband
   > Blood-Red Mask
   > Dapper-Looking Hat
   > Floppiest Hat
   > Silver Headband
   > Silver Mask
   > Bunny Hood
   > Dragon Scale Helmet
   > Sorrowful Headpiece
   > Faux-Gold Headband
  ~ 7 foot armor:
   > Speedster Boots
   > Globetrotter Boots
   > Flower Boots
   > Padded Boots
   > Snow Boots
   > Survivalist Boots
   > Trailblazing Boots
  ~ 10 shields:
   > Vishnu's Shield
   > Immovable Object
   > Turtle Shield
   > Tellurian Knight's Shield
   > Tellurian Knight's Bulwark
   > Vishnu's Aegis
   > Silver Buckler
   > Glacial Bulwark
   > Resiliant Pelt
   > Shield of the Hero
  ~ 41 accessories:
   > Holy Scriptures
   > Champion's Talisman
   > Sharp Tooth
   > Ring of the Woods
   > Green Mage Crystal
   > Vigilante's Charm
   > Taut Rope
   > Armor Bracing
   > Storm Lens
   > Bat Sling
   > Giant Turtle Shell