@@ -5489,5 +5489,26 @@
       0
     ],
     "price": 0
+  },
+  {
+    "id": 210,
+    "atypeId": 1,
+    "description": "Infused with the essence of the Lost Forest.\nThe wearer recovers 25 HP at the end of every turn.",
+    "etypeId": 6,
+    "traits": [],
+    "iconIndex": 176,
+    "name": "Ring of the Forest",
+    "note": "<Passive State: 199>",
+    "params": [
+      25,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 250
   }
 ]
