@@ -3382,7 +3382,7 @@
     ],
     "gold": 96,
     "name": "Feral Bat",
-    "note": "<Armor Weakness: Slashing>\n<Element: Wind>\n\n<Sideview Battler: Bat_1>\n<Floating>\n<LowHpGround>\n<Attack Animation: 211>\n\n<AI Priority>\nState !== Eye of the Storm +++ Random 40%: Cyclone\n</AI Priority>\n\n<Enemy Drops>\nTaut Rope: 5%\nStorm Lens: 5%\nFeral Bat Wing: 75%\nFeral Bat Wing: 75%\nEnchanted Bat Skin: 5%\nBat Sling: 5%\nShard of Glass: 1%\nEVA Scroll: 10%\nWind Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Wind>\n\n<Sideview Battler: Bat_1>\n<Floating>\n<LowHpGround>\n<Attack Animation: 211>\n\n<AI Priority>\nState !== Eye of the Storm +++ Random 40%: Cyclone\n</AI Priority>\n\n<Enemy Drops>\nTaut Rope: 5%\nStorm Lens: 5%\nFeral Bat Wing: 75%\nFeral Bat Wing: 75%\nEnchanted Bat Skin: 5%\nBat Sling: 5%\nRing of the Forest: 5%\nShard of Glass: 1%\nEVA Scroll: 10%\nWind Essence: 20%\n</Enemy Drops>",
     "params": [
       800,
       0,
@@ -3857,7 +3857,7 @@
     ],
     "gold": 64,
     "name": "Beet Boxer",
-    "note": "<Armor Weakness: Slashing>\n<Element: Plant>\n<Passive State: 136>\n\n<Enemy Drops>\nVicious Herb: 75%\nVicious Herb: 75%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nMedicinal Herb: 12.5%\nMedicinal Herb: 12.5%\nMedicinal Root: 5%\nATK Scroll ★: 10%\nPlant Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Plant>\n<Passive State: 136>\n\n<Enemy Drops>\nVicious Herb: 75%\nVicious Herb: 75%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nMedicinal Herb: 12.5%\nMedicinal Herb: 12.5%\nMedicinal Root: 5%\nRing of the Forest: 5%\nATK Scroll ★: 10%\nPlant Essence: 20%\n</Enemy Drops>",
     "params": [
       800,
       0,
@@ -3913,7 +3913,7 @@
     ],
     "gold": 96,
     "name": "Baby Turtle",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Earth>\n\n<Enemy Drops>\nTurtle Scute: 75%\nTurtle Scute: 75%\nThick-Skinned Herb: 75%\nThick-Skinned Herb: 75%\nDEF Scroll ★: 10%\nEarth Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Earth>\n\n<Enemy Drops>\nTurtle Scute: 75%\nTurtle Scute: 75%\nThick-Skinned Herb: 75%\nThick-Skinned Herb: 75%\nRing of the Forest: 5%\nDEF Scroll ★: 10%\nEarth Essence: 20%\n</Enemy Drops>",
     "params": [
       1500,
       0,
@@ -3990,7 +3990,7 @@
     ],
     "gold": 320,
     "name": "Giant Turtle",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Earth>\n\n<Enemy Drops>\nGiant Turtle Shell: 33.33%\nThick-Skinned Herb: 100%\nThick-Skinned Herb: 100%\nThick-Skinned Herb: 75%\nThick-Skinned Herb: 75%\nTurtle Scute: 100%\nTurtle Scute: 100%\nTurtle Scute: 75%\nTurtle Scute: 75%\nDEF Scroll ★: 10%\nEarth Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Earth>\n\n<Enemy Drops>\nGiant Turtle Shell: 33.33%\nThick-Skinned Herb: 100%\nThick-Skinned Herb: 100%\nThick-Skinned Herb: 75%\nThick-Skinned Herb: 75%\nTurtle Scute: 100%\nTurtle Scute: 100%\nTurtle Scute: 75%\nTurtle Scute: 75%\nRing of the Forest: 5%\nDEF Scroll ★: 10%\nEarth Essence: 20%\n</Enemy Drops>",
     "params": [
       4000,
       0,
