@@ -176,7 +176,7 @@ Additions:
    > [REDACTED TEAR]
    > [REDACTED WING]
    > [REDACTED CHIP]
- - 116 pieces of equipment:
+ - 117 pieces of equipment:
   ~ 20 weapons:
    > Steel Hammer
    > Steel Knuckles
@@ -238,7 +238,7 @@ Additions:
    > Glacial Bulwark
    > Resiliant Pelt
    > Shield of the Hero
-  ~ 41 accessories:
+  ~ 42 accessories:
    > Holy Scriptures
    > Champion's Talisman
    > Sharp Tooth
@@ -248,6 +248,7 @@ Additions:
    > Taut Rope
    > Armor Bracing
    > Storm Lens
+   > Ring of the Forest
    > Bat Sling
    > Giant Turtle Shell
    > Razor-Sharp Fang
